--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+//Paso 1.18 Agregamos esto para vector icons
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -113,6 +115,7 @@ dependencies {
     //Paso 1.0
     implementation "androidx.appcompat:appcompat:1.1.0-rc01"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0-alpha02"
+   
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
